fix: fix Layout issue, added react-responsive-carousel

--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -1,13 +1,13 @@
 .Layout {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 }
 
 .ManagerLayout {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 }
