--- a/src/views/Home/index.css
+++ b/src/views/Home/index.css
@@ -2,24 +2,27 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
   min-height: 100vh;
   overflow: hidden;
 }
 
-.Home .swiper-slide-banner {
-  object-fit: cover;
-  height: 60vh;
+.Home .Home-divider {
+  color: #f5a507;
+  font-size: 33px;
+  margin: 3rem 0;
+  /* max-width: 100vw;  */
 }
 
-.Home .swiper-slide-top-product {
-  object-fit: cover;
-  height: 60vh;
-}
+/* .Home .carousel .slider-wrapper,
+.Home .carousel .slider-wrapper img {
+  max-width: 100vw;
+  max-height: 60rem;
+} */
 
 .Home .quality-certification-container {
   display: flex;
-  width: 100vw;
+  /* width: 100vw; */
+  max-width: 100vw;
   justify-content: space-around;
 }
 
@@ -39,13 +42,13 @@
 .Home .product-cards {
   display: grid;
   gap: 10px;
-  margin: 2rem;
+  margin: 2rem 0;
+  max-width: 100vw;
 }
 
 .Home .grid-item {
   padding: 1rem;
   max-height: 20rem;
-  max-width: 14rem;
   border: 1px solid rgb(140, 140, 140);
   border-radius: 1rem;
   position: relative;
